--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
-spring.cloud.config.server.git.uri=file://${user.home}/prog/bank/config-repo
+spring.cloud.config.server.git.uri=https://github.com/i-smolina/bank-config-repo
 spring.cloud.config.server.git.default-label=master
-spring.cloud.config.server.git.clone-on-start=true
+#spring.cloud.config.server.git.clone-on-start=true
 spring.security.user.name=root
 spring.security.user.password=q1w2e3
