format application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
+spring.application.name=config-server
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/i-smolina/bank-config-repo
-spring.cloud.config.server.git.default-label=master
 
+# security
 spring.security.user.name=root
 spring.security.user.password=q1w2e3
 
+# spring cloud config
+spring.cloud.config.server.git.uri=https://github.com/i-smolina/bank-config-repo
+spring.cloud.config.server.git.default-label=master
+
 encrypt.key=fje83Ki8403Iod87dne7Yjsl3THueh48jfuO9j4U2hf64Lo
 
+# logging
 logging.level.org.springframework.security=DEBUG
+
