--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.13</version>
                 <configuration>
-                    <repository>bank_config/${project.artifactId}</repository>
+                    <repository>bank/${project.artifactId}</repository>
                     <tag>${project.version}</tag>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
