--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ server.port=8888
 # security
 spring.security.user.name=root
 spring.security.user.password=q1w2e3
-
+spring.profiles.active=native
 # spring cloud config
-spring.cloud.config.server.git.uri=https://github.com/i-smolina/bank-config-repo
-spring.cloud.config.server.git.default-label=master
+#spring.cloud.config.server.git.uri=https://github.com/i-smolina/bank-config-repo
+#spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.native.search-locations=file:/home/irina/prog/bank/config-repo
 
 encrypt.key=fje83Ki8403Iod87dne7Yjsl3THueh48jfuO9j4U2hf64Lo
 
